--- a/src/snippets/components/button.liquid
+++ b/src/snippets/components/button.liquid
@@ -21,10 +21,7 @@
 
   {%- if icon != blank -%}
 
-    {%- include 'icon',
-      name: icon,
-      classes: '',
-      attrs: '' -%}
+    {%- include 'icon', name: icon, classes: '', attrs: '' -%}
 
   {%- else -%}
 
