--- a/src/snippets/components/slider.liquid
+++ b/src/snippets/components/slider.liquid
@@ -5,39 +5,22 @@
   - slides
 
   Optional arguments:
-  - with_nav
-  - nav_slides
-  - filter_group
+  - filter_group_option
+  - filter_attr
   - classes
   - attrs
 
 {% endcomment %}
 
 
-{%- if with_nav -%}
-  <div
-    class="oo-slider slider--{{- name -}}-nav"
-    data-slider="{{- name -}}-nav"
-    data-slider-nav-for="{{- name -}}"
-    data-filter-group="{{- filter_group -}}">
-
-    {%- if nav_slides -%}
-
-      {{- nav_slides -}}
-
-    {%- else -%}
-
-      {{- slides -}}
-
-    {%- endif -%}
-
-  </div>
-{%- endif -%}
-
 <div
   class="oo-slider slider--{{- name }} {{ classes -}}"
   data-slider="{{- name -}}"
-  {%- if with_nav -%}data-slider-has-nav="{{- name -}}-nav"{%- endif -%}
+  {%- if filter_group_option -%}
+    data-filter-group-option="{{- filter_group_option -}}"
+    data-filter-attr="{{- filter_attr -}}"
+  {%- endif -%}
+  {%- if with_nav == true -%}data-has-nav="true"{%- endif -%}
   {{ attrs -}}>
 
   {{- slides -}}
