--- a/src/snippets/static/add-to-cart-form.liquid
+++ b/src/snippets/static/add-to-cart-form.liquid
@@ -54,7 +54,7 @@
 {%- include 'form-container',
   name: 'add-to-cart',
   method: 'post',
-  action: 'cart/add',
+  action: '/cart/add',
   content: form_add_to_cart_content,
   attrs: form_add_to_cart_attrs -%}
 
