--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -2,7 +2,12 @@
   display: inline-block;
   vertical-align: middle;
   margin: 0;
-  padding: $oo-size-base ($oo-size-base * 1.75);
+  padding: $oo-spacing-unit ($oo-spacing-unit * 1.75);
+  font-family: $font-heading;
+  font-weight: $font-heading-bold-weight;
+  font-size: $font-size-minor;
+  text-transform: uppercase;
+  line-height: $font-line-height;
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
@@ -17,6 +22,28 @@
   &.button--secondary {
     color: $color-white;
     background-color: $color-5;
+  }
+
+  &.button--primary-alt {
+    color: $color-2;
+    background-color: transparent;
+    border: 2px solid $color-2;
+    transition: all $oo-transition-duration $oo-transition-timing;
+    &:hover {
+      color: $color-white;
+      background-color: $color-2;
+    }
+  }
+
+  &.button--secondary-alt {
+    color: $color-5;
+    background-color: transparent;
+    border: 2px solid $color-5;
+    transition: all $oo-transition-duration $oo-transition-timing;
+    &:hover {
+      color: $color-white;
+      background-color: $color-5;
+    }
   }
 
   &.button--reset,
