--- a/src/styles/helpers/dev.scss
+++ b/src/styles/helpers/dev.scss
@@ -1,5 +1,5 @@
-html {
-  margin-top: 50px;
+#preview-bar-iframe {
+  display: none;
 }
 
 .debug.add-to-cart-controls {
@@ -10,5 +10,5 @@ html {
 }
 
 .oo-product-container {
-  margin-bottom: 100px;
+  // margin-bottom: 100px;
 }
