--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -6,6 +6,7 @@
 
 // Components
 @import '../components/button';
+@import '../components/product-gallery';
 
 // Layout
 @import '../layout/product';
