--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -13,6 +13,9 @@
 @import 'components/button';
 @import 'components/icon';
 
+// Layout
+@import 'layout/global';
+
 // Shame
 @import 'helpers/shame';
 @import 'helpers/dev';
